[package]
name = "ragnarok-maya-purple"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "ragnarok-maya-purple.exe"
LegalCopyright = "Copyright © 2023"
FileDescription = "Ragnarok MP"
ProductName = "Ragnarok MP"
ProductVersion = "1.0.0"

[build-dependencies]
winres = "0.1"

[dependencies]
eframe = "0.20.1"
winapi = { version = "0.3.9", features = ["processthreadsapi", "winnt", "memoryapi", "wow64apiset", "libloaderapi", "synchapi", "handleapi", "winuser", "tlhelp32"] }
sysinfo = "0.27.7"
ntapi = "0.4.0"
regex = "1.7.1"
egui_extras = { version = "0.20.0", features = ["image"] }
ehttp = "0.2"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
poll-promise = "0.2"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3